k8s/taskmapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskm-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taskm-api
  template:
    metadata:
      labels:
        app: taskm-api
    spec:
      serviceAccountName: taskm-logging-sa
      containers:
        - name: taskm-api
          image: 541953923651.dkr.ecr.eu-west-2.amazonaws.com/taskm-api:latest
          ports:
            - containerPort: 80
