k8s/taskmapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskm-api-service
spec:
  type: LoadBalancer
  selector:
    app: taskm-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
